# canary-cage

./: .gitignore  PLAN.md  README.md  action.yml  pyproject.toml
.github/workflows/: action-selftest.yml  ci.yml
scripts/: action_runner.py
src/canary_cage/: __init__.py  bait_tools.py  cli.py  config.py  dashboard.py  diff.py  explain.py  fingerprint.py  honey.py  mcp.py  precommit.py  scanner.py  state.py
src/canary_cage/beacons/: __init__.py  base.py  chat.py  file.py  log.py  otel.py  webhook.py
src/canary_cage/canaries/: __init__.py  base.py  docstring.py  manifest.py  markdown.py  reverse.py  todo.py
src/canary_cage/fingerprints/: __init__.py  rules.json
tests/: test_action_runner.py  test_bait_tools.py  test_beacons_scanner.py  test_canary_types.py  test_chat_beacons.py  test_cli.py  test_config.py  test_dashboard.py  test_diff.py  test_explain.py  test_fingerprint.py  test_honey.py  test_manifest_canary.py  test_mcp.py  test_otel.py  test_plant_uproot.py  test_precommit.py  test_reverse_canary.py  test_time_bomb.py  test_webhook.py
vscode-extension/: README.md  extension.js  package.json  state.js
vscode-extension/test/: state.test.js
