[project]
name = "canary-cage"
version = "0.1.0"
description = "Plant invisible prompt-injection tripwires across your repo and catch AI coding agents the moment they bite."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rwrife" }]
keywords = ["security", "ai", "agent", "canary", "honeypot", "prompt-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyyaml>=6.0",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
]
otel = [
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
]

[project.scripts]
canary = "canary_cage.cli:app"

[project.urls]
Homepage = "https://github.com/rwrife/canary-cage"
Issues = "https://github.com/rwrife/canary-cage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canary_cage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
